// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldArchitecture Component should generate select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_architecture, {"context":"lorem"})",
    "value": "lorem",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_architecture, {"context":"ipsum"})",
    "value": "ipsum",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_architecture, {"context":"dolor"})",
    "value": "dolor",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_architecture, {"context":"sit"})",
    "value": "sit",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_architecture, {"context":"none"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldArchitecture Component should handle updating through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "architecture",
        "type": "SET_QUERY",
        "value": "ipsum",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldArchitecture Component should handle updating through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "architecture",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldArchitecture Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"architecture"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldArchitecture"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={[]}
  placeholder="t(curiosity-toolbar.placeholder, {"context":"architecture"})"
  position="left"
  selectedOptions={null}
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
